--- a/app/build.gradle
+++ b/app/build.gradle
@@ -105,13 +105,11 @@ dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
     implementation 'androidx.core:core-ktx:1.6.0'
     implementation 'androidx.appcompat:appcompat:1.3.0'
-    implementation 'com.google.android.material:material:1.4.0'
+
     implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
-    implementation 'com.google.android.material:material:1.4.0'
     implementation 'androidx.navigation:navigation-fragment-ktx:2.3.5'
     implementation 'androidx.navigation:navigation-ui-ktx:2.3.5'
     implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
-    implementation 'androidx.navigation:navigation-fragment-ktx:2.3.5'
     implementation 'androidx.navigation:navigation-ui-ktx:2.3.5'
 
     // Kotlin Android Coroutines
@@ -135,13 +133,8 @@ dependencies {
     implementation 'com.jakewharton.threetenabp:threetenabp:1.3.0'
 
     // Room
-    implementation 'androidx.room:room-runtime:2.4.0-alpha03'
     implementation "androidx.legacy:legacy-support-v4:1.0.0"
-    implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
     implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.3.1'
-
-    // Better dateTime-time support even on older Android versions
-    implementation 'com.jakewharton.threetenabp:threetenabp:1.3.0'
 
     // Glide
     implementation 'com.github.bumptech.glide:glide:4.12.0'
@@ -151,19 +144,13 @@ dependencies {
     implementation 'com.xwray:groupie:2.9.0'
     implementation 'com.xwray:groupie-kotlin-android-extensions:2.8.0'
 
-
     // Preference
     implementation 'androidx.preference:preference-ktx:1.1.1'
 
-    // New Material Design
-    implementation 'com.google.android.material:material:1.4.0'
-
-
-    //chart
+    //Chart
     implementation 'com.github.PhilJay:MPAndroidChart:v3.1.0'
 
     kapt 'androidx.room:room-compiler:2.4.0-alpha03'
-
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
