--- a/app/build.gradle
+++ b/app/build.gradle
@@ -11,10 +11,11 @@ keystoreProperties.load(new FileInputStream(keystorePropertiesFile))
 
 android {
     compileSdkVersion 30
-    buildToolsVersion "29.0.3"
+    buildToolsVersion "30.0.3"
 
     buildFeatures {
         dataBinding true
+        viewBinding true
     }
 
     defaultConfig {
@@ -25,6 +26,15 @@ android {
         versionName "1.0.1"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+
+        javaCompileOptions {
+            annotationProcessorOptions {
+                arguments += ["room.schemaLocation":
+                                      "$projectDir/schemas".toString()]
+            }
+        }
+
+
     }
 
     signingConfigs {
@@ -87,7 +97,7 @@ dependencies {
 
     implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.3.1'
 
-    def room_version = "2.3.0"
+    def room_version = "2.4.0-alpha03"
 
     implementation "androidx.room:room-runtime:$room_version"
     kapt "androidx.room:room-compiler:$room_version"
@@ -132,9 +142,6 @@ dependencies {
     // Better dateTime-time support even on older Android versions
     implementation 'com.jakewharton.threetenabp:threetenabp:1.3.0'
 
-    // Room
-    implementation "androidx.legacy:legacy-support-v4:1.0.0"
-    implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.3.1'
 
     // Glide
     implementation 'com.github.bumptech.glide:glide:4.12.0'
