--- a/app/build.gradle
+++ b/app/build.gradle
@@ -122,6 +122,8 @@ dependencies {
     implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
     implementation 'androidx.navigation:navigation-ui-ktx:2.3.5'
 
+    //
+
     // Kotlin Android Coroutines
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.5.0'
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.5.0"
@@ -148,8 +150,9 @@ dependencies {
     kapt 'com.github.bumptech.glide:compiler:4.12.0'
 
     // Groupie RecyclerView
-    implementation 'com.xwray:groupie:2.9.0'
-    implementation 'com.xwray:groupie-kotlin-android-extensions:2.8.0'
+    implementation "com.github.lisawray.groupie:groupie:2.9.0"
+    implementation "com.github.lisawray.groupie:groupie-viewbinding:2.9.0"
+    implementation 'com.xwray:groupie-kotlin-android-extensions:2.9.0'
 
     // Preference
     implementation 'androidx.preference:preference-ktx:1.1.1'
