--- a/app/build.gradle
+++ b/app/build.gradle
@@ -87,8 +87,8 @@ dependencies {
     //firebase
     implementation platform('com.google.firebase:firebase-bom:28.2.1')
     implementation 'com.google.firebase:firebase-analytics-ktx'
-    implementation 'com.google.firebase:firebase-crashlytics-krx'
-    implementation 'androidx.lifecycle:lifecycle-livedata-ktx'
+    implementation 'com.google.firebase:firebase-crashlytics-ktx'
+    implementation "androidx.lifecycle:lifecycle-livedata-ktx:2.3.1"
 
     def room_version = "2.4.0-alpha03"
 
